[S10P31A205-294] Feat: 남혜미님 요청으로 반환 DTO 수정